.metadata/.plugins/org.eclipse.cdt.ui/BlackPillClkCfg_NoHAL.build.log
16:00:20 **** Build of configuration Debug for project BlackPillClkCfg_NoHAL ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -I"/home/michael/Documents/STCode/MISC/BlackPillClkCfg_NoHAL/Inc" -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f411ceux.d" -MT"Startup/startup_stm32f411ceux.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Startup/startup_stm32f411ceux.o" "../Startup/startup_stm32f411ceux.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411CEUx -c -I../Inc -include"/home/michael/Documents/STCode/MISC/BlackPillClkCfg_NoHAL/Inc/stm32f411xe.h" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411CEUx -c -I../Inc -include"/home/michael/Documents/STCode/MISC/BlackPillClkCfg_NoHAL/Inc/stm32f411xe.h" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411CEUx -c -I../Inc -include"/home/michael/Documents/STCode/MISC/BlackPillClkCfg_NoHAL/Inc/stm32f411xe.h" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/sysmem.o"
In file included from <command-line>:
/home/michael/Documents/STCode/MISC/BlackPillClkCfg_NoHAL/Inc/stm32f411xe.h:789:31: error: expected identifier or '(' before 'RCC_TypeDef'
  789 | #define RCC                 ((RCC_TypeDef *) RCC_BASE)
      |                               ^~~~~~~~~~~
../Src/main.c:24:1: note: in expansion of macro 'RCC'
   24 | RCC->CR |= 0;
      | ^~~
/home/michael/Documents/STCode/MISC/BlackPillClkCfg_NoHAL/Inc/stm32f411xe.h:700:31: error: expected ')' before '(' token
  700 | #define RCC_BASE              (AHB1PERIPH_BASE + 0x3800UL)
      |                               ^
/home/michael/Documents/STCode/MISC/BlackPillClkCfg_NoHAL/Inc/stm32f411xe.h:789:46: note: in expansion of macro 'RCC_BASE'
  789 | #define RCC                 ((RCC_TypeDef *) RCC_BASE)
      |                                              ^~~~~~~~
../Src/main.c:24:1: note: in expansion of macro 'RCC'
   24 | RCC->CR |= 0;
      | ^~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

16:00:21 Build Failed. 4 errors, 0 warnings. (took 625ms)

